mqtt image soource

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
+    "ng2-mqtt": "^0.1.2",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   },
