--- a/package.json
+++ b/package.json
@@ -28,12 +28,20 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
     "body-parser": "^1.17.2",
+    "chalk": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.0",
     "express": "^4.15.4",
+    "jsonwebtoken": "^7.4.3",
+    "mongoose": "^4.11.8",
     "morgan": "^1.8.2",
     "ng2-mqtt": "^0.1.2",
+    "node-cron": "^1.2.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "python-shell": "^0.4.0",
     "rxjs": "^5.4.3",
+    "serve-favicon": "^2.4.3",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
