--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ndvi",
+  "name": "ndvi-frontend",
   "version": "0.0.0",
   "license": "MIT",
   "author": "yuudj",
@@ -8,7 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && node server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -16,36 +16,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.6",
-    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "^4.3.6",
     "@angular/compiler": "^4.3.6",
     "@angular/core": "^4.3.6",
     "@angular/flex-layout": "^2.0.0-rc.1",
     "@angular/forms": "^4.3.6",
     "@angular/http": "^4.3.6",
-    "@angular/material": "^2.0.0-beta.8",
+    "@angular/material": "^2.0.0-beta.10",
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
-    "body-parser": "^1.17.2",
-    "chalk": "^2.1.0",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.0",
-    "express": "^4.15.4",
-    "jsonwebtoken": "^7.4.3",
-    "mongoose": "^4.11.8",
-    "morgan": "^1.8.2",
-    "ng2-mqtt": "^0.1.2",
-    "node-cron": "^1.2.1",
-    "passport": "^0.4.0",
-    "passport-http": "^0.3.0",
-    "python-shell": "^0.4.0",
-    "rxjs": "^5.4.3",
-    "serve-favicon": "^2.4.3",
-    "zone.js": "^0.8.17"
+    "ng2-mqtt": "^0.1.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
+    "@angular/cli": "1.3.1",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
