--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.15.4",
     "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.9",
+    "mongoose-materialized": "^0.1.9",
     "morgan": "^1.8.2",
+    "mqtt": "^2.12.0",
     "ng2-mqtt": "^0.1.2",
     "node-cron": "^1.2.1",
     "passport": "^0.4.0",
