--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
-    "ng2-mqtt": "^0.1.2"
+    "ng2-mqtt": "^0.1.2",
+    "ng2letteravatar": "^1.0.3"
   },
   "devDependencies": {
     "@angular/cli": "1.3.1",
